--- a/assets/default.css
+++ b/assets/default.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Inter;
+  src: url(./Inter.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +13,7 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Inter, sans-serif;
   width: 100vw;
   height: 100vh;
   justify-content: center;
@@ -16,12 +21,15 @@ body {
 }
 
 a {
-  color: #aaaaaa;
+  color: #2c2ca0;
   text-decoration: none;
 }
 
 a:hover,
 a:focus {
-  color: #aaaaaa;
   text-decoration: underline;
+}
+
+img {
+  max-width: 100%;
 }
