--- a/assets/layout.css
+++ b/assets/layout.css
@@ -2,6 +2,28 @@
   color: var(--highlight-000);
 }
 
+.loading {
+  display: none;
+}
+
+@media (max-width: 800px) {
+  #main-nav,
+  #main-content {
+    display: none;
+  }
+  body {
+    display: flex;
+    min-height: 100svh;
+    justify-content: center;
+    align-items: center;
+  }
+  .loading {
+    display: block;
+    width: 20rem;
+    aspect-ratio: 1;
+  }
+}
+
 a.logo {
   font-weight: 900;
   display: flex;
